@@ -43,8 +43,12 @@
 module glimmer_ncparams
   !*FD read netCDF I/O related configuration files
   !*FD written by Magnus Hagdorn, May 2004
+  use glimmer_ncdf, only: glimmer_nc_meta
+    
   private
   public :: ReadNCParams
+
+  type(glimmer_nc_meta),save :: default_metadata
 
 contains
   subroutine ReadNCParams(model)
@@ -63,6 +67,12 @@ contains
     ! read configuration
     model%funits%ncfile  = trim(model%funits%output_stem) // '.glw'
     call ConfigRead(model%funits%ncfile,config)
+
+    ! get default meta data
+    call GetSection(config,section,'default')
+    if (associated(section)) then
+       call handle_metadata(section, default_metadata, .true.)
+    end if
 
     ! setup outputs
     call GetSection(config,section,'output')
@@ -90,6 +100,42 @@ contains
   ! private procedures
   !==================================================================================
 
+  subroutine handle_metadata(section,metadata, default)
+    use glimmer_ncdf
+    use glimmer_config
+    use glimmer_global, only: glimmer_version
+    implicit none
+    type(ConfigSection), pointer :: section
+    type(glimmer_nc_meta) ::metadata
+    logical :: default
+
+    ! local variables
+    character(len=8) :: date
+    character(len=10) :: time
+
+    if (.not.default) then
+       metadata%title = trim(default_metadata%title)
+       metadata%institution = trim(default_metadata%institution)
+       metadata%references = trim(default_metadata%references)
+       metadata%comment = trim(default_metadata%comment)
+    end if
+
+    call GetValue(section,'title',metadata%title)
+    call GetValue(section,'institution',metadata%institution)
+    call GetValue(section,'references',metadata%references)
+    call GetValue(section,'comment',metadata%comment)
+
+    if (default) then
+       call date_and_time(date,time)
+       metadata%source = 'Generated by '//trim(glimmer_version)
+       write(metadata%history,fmt="(a4,'-',a2,'-',a2,' ',a2,':',a2,':',a6,' : ',a)") date(1:4),date(5:6),date(7:8),&
+            time(1:2),time(3:4),time(5:10),trim(glimmer_version)
+    else
+       metadata%source = trim(default_metadata%source)
+       metadata%history = trim(default_metadata%history)
+    end if
+  end subroutine handle_metadata
+
   function handle_output(section, output)
     use glimmer_ncdf
     use glimmer_config
@@ -114,6 +160,9 @@ contains
     end if
     call GetValue(section,'spotx',handle_output%spotx,numspots)
     call GetValue(section,'spoty',handle_output%spoty,numspots)
+
+    ! get metadata
+    call handle_metadata(section, handle_output%metadata,.false.)
 
     if (associated(handle_output%spotx) .and. associated(handle_output%spoty)) then
        if (size(handle_output%spotx).ne.size(handle_output%spoty)) then
@@ -142,9 +191,6 @@ contains
     type(ConfigSection), pointer :: section
     type(glimmer_nc_input), pointer :: input
     type(glimmer_nc_input), pointer :: handle_input
-
-    ! local variables
-    character(len=210) vars
 
     handle_input=>add(input)
     
